--- a/styles/globals.css
+++ b/styles/globals.css
@@ -144,7 +144,7 @@ width: 100%;
 .hero-banner-container button{
    border-radius: 15px;
   padding: 10px 16px;
-  background-color: #f02d34;
+  background-color: #898989;
   color: white;
   border: none;
   margin-top: 40px;
@@ -212,7 +212,7 @@ text-align: end;
 }
 .footer-banner-container{
   padding: 100px 40px;
-  background-color: #f02d34;
+  background-color: #6b6b6b;
   border-radius: 15px;
   position: relative;
   height: 400px;
@@ -427,13 +427,13 @@ padding: 30px 65px;
   border-radius: 15px;
    background-color: #ebebeb;
 
-  width: 400px;
+  width: 200px;
   height: 400px;
   cursor: pointer;
   transition: .3s ease-in-out;
 }
 .product-detail-image:hover{
-  background-color: #f02d34;
+  background-color: #b7b6b6;
 
 }
 .small-images-container{
@@ -444,13 +444,13 @@ padding: 30px 65px;
 .small-image{
   border-radius: 8px;
   background-color: #ebebeb;
-  width: 70px;
+  width: 30px;
   height: 70px;
   cursor: pointer;
 }
 
 .selected-image{
-  background-color:#f02d34;
+  background-color:#dadada;
 }
 .reviews{
   color: #f02d34;
@@ -490,27 +490,34 @@ padding: 30px 65px;
   display: flex;
   gap: 30px;
 }
+
+.button:hover, .button:active {
+    background-color: #5f5f5f ;
+}
 .buttons .add-to-cart{
   padding: 10px 20px;
-  border: 1px solid #f02d34 ;
+  border: 1px solid #6a6a6a;
   margin-top: 40px;
   font-size: 18px;
   font-weight: 500;
   background-color: white;
-  color: #f02d34;
+  color: #6a6a6a;
+  
   cursor: pointer;
   width: 200px;
    transform: scale(1, 1);
   transition: transform 0.5s ease;
 }
 .buttons .add-to-cart:hover{
-  transform:scale(1.1,1.1)
+  transform:scale(1.1,1.1);
+  background-color: #c1c1c1;
+  border: #c1c1c1;
 }
 .buttons .buy-now{
   width: 200px;
 
   padding: 10px 20px;
-  background-color: #f02d34;
+  background-color: #6a6a6a;
   color: white;
   border: none;
   margin-top: 40px;
@@ -679,7 +686,7 @@ margin-top: 160px;
     flex-wrap: wrap;
     }
   .product-detail-container .product-detail-image{
-    width: 350px;
+    width: 250px;
     height: 350px;
   }
   .cart-container{
